papers/paper32/v1.6/scripts/README.md
# Paper 32 v1.6 Scripts

Classification: `verified / public-reproducibility-support / R4-FIRAS repaired`

Run order:

```bash
python3 scripts/01_compute_framework_constants.py
python3 scripts/02_recollapse_acceleration.py
python3 scripts/03_x_crit_identity.py
python3 scripts/04_recollapse_cycle_timescales.py
python3 scripts/05_kb7_source_block_validation.py
python3 scripts/06_n_s_derivation_chain.py
python3 scripts/07_a_s_derivation_chain.py
python3 scripts/08_universal_gmp_classification.py
python3 scripts/09_r4_firas_impact_audit.py
python3 scripts/10_validate_expected_outputs.py
```

## Script Inventory

- `01_compute_framework_constants.py`
  - Recomputes `Q`, `K_gauge`, `f_Gamma`, `Delta`, `R_U`,
    `R4_FIRAS`, `T_obs(R4_FIRAS)`, the historical `T_obs(R4=1)`
    diagnostic, `tau_eff`, `n_s`, and `x_crit`.
- `02_recollapse_acceleration.py`
  - Recomputes `Rddot = -c^2 r_s/(2R^2)` and `Rddot(r_s)`.
- `03_x_crit_identity.py`
  - Recomputes `x_crit = Q^(-1/4)` and sample visibility statuses.
- `04_recollapse_cycle_timescales.py`
  - Recomputes `110.993 Gyr` recollapse and `221.987 Gyr` conditional cycle.
- `05_kb7_source_block_validation.py`
  - Records the scoped KB.7/P4 source-block validation gates and checks
    `Z(e^x)=Q`. This does not derive Paper 17 optical R4.
- `06_n_s_derivation_chain.py`
  - Recomputes `n_s = 1 - K_gauge/x`.
- `07_a_s_derivation_chain.py`
  - Recomputes `A_s = 2.0072459972737347e-9`.
- `08_universal_gmp_classification.py`
  - Reproduces the three-region universal-GMP characterization ledger.
- `09_r4_firas_impact_audit.py`
  - Reproduces the R4/FIRAS numerical impact and script/manuscript damage
    ledger for the v1.6 repair.
- `10_validate_expected_outputs.py`
  - Validates the frozen JSON outputs shipped in the bundle.

All scripts use only the Python standard library.
